fix bug image on mobile, remove select card when click again.

--- a/CardProWebsite/CardProWebsite/src/app.css
+++ b/CardProWebsite/CardProWebsite/src/app.css
@@ -134,3 +134,12 @@
         transform: rotate(360deg);
     }
 }
+.content-border-sacombank {
+    border-top: solid 1px #f4e9e9;
+}
+/*block scroll */
+html, body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
